Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyOiGAlbBOPn9qLA/WHTDGM/",
+      "authorship_tag": "ABX9TyMLD/cfwv7bSiFkIMiOORfV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -216,6 +216,113 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "uMHSgUejwv1B"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(np.ndarray)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ozPDDjH5w2xe",
+        "outputId": "e33f138b-964d-4217-8c70-9b006d9b4da2"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'numpy.ndarray'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 클래스 이름 조회하기 : __name__\n",
+        "np.ndarray.__name__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "vGyxLgi7w67P",
+        "outputId": "9442b571-ddbd-4138-d244-e2b7a86deea8"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ndarray'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(np.ndarray.var)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H4WV5GABxSWN",
+        "outputId": "102e8f85-d557-496a-c9a1-23c934135297"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "method_descriptor"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 다차원 배열 클래스에 정의된 속성이나 메소드를 확인하기 위해\n",
+        "# 이름공간(namespace) 확인하기\n",
+        "for i in dir(np.ndarray) : \n",
+        "  if not i.startswitch('_') : \n",
+        "    if type(np.ndarray.__dict__[i]) != type(np.ndarray.var) : \n",
+        "      print(i)"
+      ],
+      "metadata": {
+        "id": "Whd0QIPRxby2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
