Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyOIT9fbJIWX1ZNqteenObjd",
+      "authorship_tag": "ABX9TyPBikehdkvgx0qlL59PWjzU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -484,6 +484,239 @@
           "execution_count": 23
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# data : 메모리에 저장된 레퍼런스 출력\n",
+        "a.data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XQl0tKhKzdEm",
+        "outputId": "7886e652-09d5-4e49-9bd9-6c7efe925ec4"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<memory at 0x7fd6378a6dc0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# obj로 참조하면 다차원 배열의 값을 보여줌.\n",
+        "a.data.obj"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4DzjlBDKzlOJ",
+        "outputId": "53447532-05a7-48c3-a194-6d508ec03470"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(a.data.obj)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QfRCkpCPztrN",
+        "outputId": "1076bcc8-5423-4139-f881-0a4af7156947"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# base : 원본 레퍼런스를 저장함\n",
+        "c = b\n",
+        "c.base is b.base"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UDgJzd9vz9C6",
+        "outputId": "f14dc928-c953-4575-9b70-cc086a84773f"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 원본 배열 변경하기\n",
+        "c[0] = 100\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C7740anQ0STQ",
+        "outputId": "07dd6856-1d10-404d-c354-49fb6feda9cc"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([100,   2,   3,   4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "88-OjfLV0X4y",
+        "outputId": "c6e6485a-7909-492f-950e-16eb2997db09"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([100,   2,   3,   4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 다차원 배열을 복사해서 새로운 배열 만들기"
+      ],
+      "metadata": {
+        "id": "HQ63edKl0kFU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = np.array(b)\n",
+        "d[0] = 99\n",
+        "\n",
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BXaJ4Rh80gzz",
+        "outputId": "07c2c5c7-a69b-43f7-ad3a-82a4b51d0988"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([99,  2,  3,  4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rtxvxVWZ0uTc",
+        "outputId": "64a938d8-c192-467a-8d18-bfcb16928d84"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([100,   2,   3,   4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "fZPWxFII0zK2"
+      }
     }
   ]
 }
