Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyPBikehdkvgx0qlL59PWjzU",
+      "authorship_tag": "ABX9TyMRSAl2v8UK8gdLnhUw9Uh0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -713,9 +713,305 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### float형 다차원 배열 만들기"
+      ],
       "metadata": {
         "id": "fZPWxFII0zK2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e = np.array(l, dtype=np.float)\n",
+        "e"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qB7mFlsG09rh",
+        "outputId": "f9ae5503-74d9-4b00-bd9c-befac40a9d44"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-34-13771441d24d>:1: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+            "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+            "  e = np.array(l, dtype=np.float)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "buziHQTf1Gsr",
+        "outputId": "22fe7614-cebf-447f-bb5b-a8e493fd4834"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a2 = np.array([[1,2,3],[4,5,6]])\n",
+        "a2.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WllXLJi-1dRc",
+        "outputId": "56575b33-0694-492d-85e8-bc6bec9594a4"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 차원 확인\n",
+        "a2.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SrFReR0Q1iU_",
+        "outputId": "6bba8ccb-094c-4976-8386-dc640d2660fb"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a2.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ilwhstgO1lEF",
+        "outputId": "74dd526b-90c7-4d71-81ff-a2ac508f4818"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a2.itemsize"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cmXyf2Qx2qt7",
+        "outputId": "4217c438-35a8-44cc-c0fc-1a6a61d16d96"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a2.size"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FOVVwNWX21h2",
+        "outputId": "9b29cd97-d1e3-4e90-f42c-0b9f7657f274"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### strides\n",
+        "- 행을 기준으로 내부의 1차원 배열을 원소로 관리함\n",
+        "- (하나 행의 전체 길이, 1차원 배열의 원소 하나의 길이)"
+      ],
+      "metadata": {
+        "id": "fkRSIij_29ss"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a2.strides"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c3hbnMbf3fMW",
+        "outputId": "1d76159b-63d7-4df6-a819-5cef5904587d"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(24, 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flatten\n",
+        "a2.flatten()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tN2BLBlx4L4C",
+        "outputId": "9aee0d26-711c-4ae8-d17c-80240483b937"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ravel() : 내부 데이터 그대로 반환\n",
+        "a2.ravel()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wD4OXk_Q4Uu8",
+        "outputId": "f69122c4-e313-44c9-c6cb-610572ae62cd"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 넘파이 배열 원소 조회하기"
+      ],
+      "metadata": {
+        "id": "-zJYUR2C4k0U"
       }
     }
   ]
