Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyNyT1RIiKJIy/OIn+sb7mmG",
+      "authorship_tag": "ABX9TyMi6EU5I068S1PLU1DK7G1p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1353,6 +1353,151 @@
           },
           "metadata": {},
           "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 넘파이 모듈의 배열 내부구조 확인"
+      ],
+      "metadata": {
+        "id": "6AEAyXzvBhnZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "na = np.array([[[1,2,3,],[4,5,6]],[[1,2,3,],[4,5,6]]])\n",
+        "na"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c-NUI_EtBlRF",
+        "outputId": "82c5931e-38b8-488f-91f2-f8697f27281f"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[1, 2, 3],\n",
+              "        [4, 5, 6]],\n",
+              "\n",
+              "       [[1, 2, 3],\n",
+              "        [4, 5, 6]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "na.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eQcgBivDBw_2",
+        "outputId": "10a69c95-f7c9-4756-d61f-44a1049164cc"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "na.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FCDg1fuWByOH",
+        "outputId": "e954ae0e-d78d-4084-fc39-9b9f0466e668"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "na[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ud_T0OyBCKVz",
+        "outputId": "2ee805c6-3fb5-4064-a3d0-661cffc694ed"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3],\n",
+              "       [4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "na[0].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fTFVnsojCL_w",
+        "outputId": "1337235b-7e79-4da8-e50a-1a3284fad281"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
         }
       ]
     }
